--- a/jdk11/build.gradle
+++ b/jdk11/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     //compileOnly project(path: ':rst-document')
     compileOnly 'com.devives:devive-rst-doc4sphinx:0.2.0'
     //compileOnly project(path: ':rst-document-for-sphinx')
+    compileOnly project(path: ':html2rst')
     compileOnly project(path: ':javasphinx')
     compileOnly 'org.jsoup:jsoup:1.15.3'
 
@@ -47,6 +48,7 @@ dependencies {
     //testImplementation project(path: ':rst-document')
     testImplementation 'com.devives:devive-rst-doc4sphinx:0.2.0'
     //testImplementation project(path: ':rst-document-for-sphinx')
+    testImplementation project(path: ':html2rst')
     testImplementation project(path: ':javasphinx')
     testImplementation 'org.jsoup:jsoup:1.15.3'
     testImplementation platform('org.junit:junit-bom:5.9.1')
