--- a/jdk17/build.gradle
+++ b/jdk17/build.gradle
@@ -180,6 +180,14 @@ signing {
     sign publishing.publications.RstDoclet
 }
 
+tasks.register("zip-for-central-sonatype", Zip) {
+    group("publishing")
+    dependsOn("publish")
+    setArchiveFileName( "$archivesBaseName-all-$version"+".zip")
+    from(layout.buildDirectory.dir("repo")){
+        exclude("**/maven-metadata.xml*")
+    }
+}
 
 List<String> exportsList = [
         "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
