--- a/jdk21/build.gradle
+++ b/jdk21/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 group = 'com.devives'
 archivesBaseName = "devive-rst-doclet-jdk21"
-version = '0.4.4'
+version = "0.4.5"
 
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
