--- a/jdk8/build.gradle
+++ b/jdk8/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 group = 'com.devives'
 archivesBaseName = "devive-rst-doclet-jdk8"
-version = '0.4.4'
+version = "0.4.5"
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
