--- a/jdk17/build.gradle
+++ b/jdk17/build.gradle
@@ -153,8 +153,8 @@ publishing {
 
                 licenses {
                     license {
-                        name = "GNU General Public License Version 2.0"
-                        url = "https://www.gnu.org/licenses/old-licenses/gpl-2.0.txt"
+                        name = "GNU General Public License Version 3.0"
+                        url = "https://www.gnu.org/licenses/gpl-3.0.txt"
                     }
                 }
 
